unpackaged/main/default/objects/Notification__c/fields/NotificationManagementId__c.field-meta.xml
<CustomField>
    <fullName>NotificationManagementId__c</fullName>
    <label>Notification Management Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>