unpackaged/main/default/objects/Notification__c/fields/SendingTime__c.field-meta.xml
<CustomField>
    <fullName>SendingTime__c</fullName>
    <label>Sending Time</label>
    <type>DateTime</type>
</CustomField>