unpackaged/main/default/objects/Notification__c/fields/Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent?</label>
    <type>Checkbox</type>
</CustomField>