unpackaged/main/default/objects/Notification__c/fields/Silent__c.field-meta.xml
<CustomField>
    <fullName>Silent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Silent</label>
    <type>Checkbox</type>
</CustomField>