unpackaged/main/default/objects/Notification__c/fields/TargetScreenId__c.field-meta.xml
<CustomField>
    <fullName>TargetScreenId__c</fullName>
    <label>Target Screen Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>