unpackaged/main/default/objects/Notification__c/listViews/Armen_notifs.listView-meta.xml
<ListView>
    <fullName>Armen_notifs</fullName>
    <columns>NAME</columns>
    <columns>SendingTime__c</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Sent__c</columns>
    <columns>Seen__c</columns>
    <columns>Read__c</columns>
    <columns>Client__c</columns>
    <columns>Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>equals</operation>
        <value>Armen Ispiryan</value>
    </filters>
    <label>Armen notifs</label>
</ListView>