unpackaged/main/default/objects/Notification__c/listViews/CRM_team_notifs.listView-meta.xml
<ListView>
    <fullName>CRM_team_notifs</fullName>
    <booleanFilter>(1 OR 2 OR 3 OR 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SendingTime__c</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Sent__c</columns>
    <columns>Seen__c</columns>
    <columns>Read__c</columns>
    <columns>Client__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>linda</value>
    </filters>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>Maxence</value>
    </filters>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>Lucie</value>
    </filters>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>Cyril</value>
    </filters>
    <label>CRM team notifs</label>
</ListView>